--- a/Front-end/semana2/calculadora de imc-inicio_js/style-imc.css
+++ b/Front-end/semana2/calculadora de imc-inicio_js/style-imc.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container_principal {
-  background-color: #e1e9f0;
+  background-color: #ffffff;
   width: 400px;
   max-width: 90%;
   border-radius: 4px;
@@ -36,12 +36,13 @@ p {
 label {
   font-size: 16px;
   font-weight: bold;
+  color: #3e3e3e;
 }
 .input {
   width: 100%;
   height: 34px;
   margin-top: 10px;
-  border: 1px solid #ffffffb2;
+  border: 1px solid #14c087b2;
   border-radius: 8px;
   outline: none;
   padding-left: 2px;
@@ -51,7 +52,7 @@ label {
   margin-bottom: 10px;
 }
 .input:focus {
-  border: 2px solid #0d998646;
+  border: 2px solid #038372d3;
 }
 .input::placeholder {
   text-align: right;
@@ -70,18 +71,26 @@ label {
     rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px,
     rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  transition: transform 0.25s ease-in-out;
+  cursor: pointer;
+}
+.botao-calcular:hover {
+  transform: scale(1.05);
+}
+.botao-calcular:active {
+  transform: scale(0.95);
 }
 
 .result {
   width: 100%;
   height: 200px;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-top: 20px;
-  border: #0d9987 solid 2px;
   border-radius: 8px;
+  gap: 10px;
   background-color: #eff6ff;
   text-align: center;
   opacity: 0;
@@ -99,19 +108,46 @@ label {
   font-size: 18px;
   font-weight: bold;
 }
+.result-box {
+  background: rgba(8, 140, 228, 0.15); /* light transparent blue */
+  border: 1px solid rgba(0, 0, 0, 0.08); /* soft border */
+  border-radius: 12px;
+  padding: 20px;
+  backdrop-filter: blur(6px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+.result p {
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3e3e3e50;
+}
+#imc-value {
+  font-size: 43px;
+}
 .clear {
   border: none;
   border-radius: 8px;
   height: 32px;
-  width: 15%;
-  margin-left: 10px;
+  min-width: 60px;
+  cursor: pointer;
+
+  transition:
+    transform 0.2s ease,
+    opacity 0.2s ease;
+}
+.clear:hover {
+  transform: scale(1.05);
+  opacity: 0.85;
+}
+.clear:active {
+  transform: scale(0.95);
 }
 .classification-table {
   margin-top: 60px;
   width: 442px;
   max-width: 90%;
   margin: 40px auto;
-  background-color: #e1e9f0;
+  background-color: #ffffff;
   border-radius: 12px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
