--- a/Front-end/semana2/calculadora de imc-inicio_js/style-imc.css
+++ b/Front-end/semana2/calculadora de imc-inicio_js/style-imc.css
@@ -21,7 +21,7 @@ body {
 .title {
   font-size: 32px;
   text-align: center;
-  color: #3e3e3e;
+  color: #51d2ab;
   font-weight: bold;
 }
 h1,
@@ -46,6 +46,7 @@ label {
   border-radius: 8px;
   outline: none;
   padding-left: 2px;
+  box-sizing: border-box;
 
   font-size: 18px;
   color: gray;
@@ -60,7 +61,7 @@ label {
   font-size: 14px;
 }
 .botao-calcular {
-  width: 80%;
+  width: 80.3%;
   height: 32px;
   border-radius: 4px;
   border: none;
@@ -73,6 +74,7 @@ label {
     rgba(0, 0, 0, 0.09) 0px -3px 5px;
   transition: transform 0.25s ease-in-out;
   cursor: pointer;
+  margin-right: 34px;
 }
 .botao-calcular:hover {
   transform: scale(1.05);
@@ -125,11 +127,12 @@ label {
   font-size: 43px;
 }
 .clear {
-  border: none;
+  border: 2px solid #3e3e3e2d;
   border-radius: 8px;
-  height: 32px;
-  min-width: 60px;
+  height: 34px;
+  width: 40px;
   cursor: pointer;
+  background-color: white;
 
   transition:
     transform 0.2s ease,
