--- a/Front-end/semana2/pagina de login/style_login.css
+++ b/Front-end/semana2/pagina de login/style_login.css
@@ -16,9 +16,8 @@ a {
   align-items: center;
   flex-direction: column;
   padding: 20px;
-  width: 560px;
-  margin: 0 auto;
-  margin-top: 100px;
+  width: 40%;
+  margin: 100px auto;
   border-radius: 8px;
   background-color: white;
 }
