--- a/Front-end/semana 1/curriculo/curriculotestcss.css
+++ b/Front-end/semana 1/curriculo/curriculotestcss.css
@@ -64,6 +64,9 @@ h3 {
   font-weight: 600;
   text-align: center;
 }
+.sub-title {
+  text-align: center;
+}
 a {
   color: #1e73ff;
 }
@@ -72,4 +75,21 @@ ul {
 }
 div.separador {
   border: 1px solid #1e73ff;
+}
+/* min = maior
+  max = menor 
+*/
+@media (min-width: 600px) {
+  body {
+    background-color: #000;
+  }
+}
+@media (max-width: 600px) {
+  div.separador {
+    border-color: red;
+  }
+  .contato1, .contato2 {
+    flex-direction: column;
+    align-items: center;
+  }
 }
