--- a/Front-end/semana 1/tela inicial do ifood/style-ifood.css
+++ b/Front-end/semana 1/tela inicial do ifood/style-ifood.css
@@ -199,3 +199,24 @@ a {
   padding: 20px;
   background-color: #f5f5f5;
 }
+@media (max-width: 800px) {
+  .all-content-container {
+    flex-direction: column;
+  }
+  .market-container,
+  .restaurant-container {
+    width: 100%;
+  }
+  .container-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-nav {
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .nav-links {
+    flex-direction: column;
+  }
+}
