--- a/Front-end/semana 1/tabela nutricional/style_tabela-nutricional.css
+++ b/Front-end/semana 1/tabela nutricional/style_tabela-nutricional.css
@@ -59,3 +59,8 @@ body {
 .tabela_nutricional tr:hover {
   background-color: rgb(255, 255, 255);
 }
+@media(max-width: 800px) {
+  .tabela_nutricional {
+    width: 100%;
+  }
+}
